--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.3'
 services:
   tyk-gateway:
-    image: docker.tyk.io/tyk-gateway/tyk-gateway:v5.1.0
+    image: tykio/tyk-gateway:v5.3.8
+    container_name: tyk-gateway
+    restart: always
     ports:
       - 8080:8080
-    networks:
-      - tyk
     volumes:
       - ./tyk.standalone.conf:/opt/tyk-gateway/tyk.conf
       - ./apps:/opt/tyk-gateway/apps
@@ -14,14 +13,79 @@ services:
       - ./policies:/opt/tyk-gateway/policies
     environment:
       - TYK_GW_SECRET=foo
+      - TYK_GW_DBAPPCONFOPTIONS_CONNECTIONSTRING=http://tyk-dashboard:3000
+      - TYK_GW_POLICIES_POLICYCONNECTIONSTRING=http://tyk-dashboard:3000
     depends_on:
       - tyk-redis
+      - tyk-dashboard
+
+  tyk-dashboard:
+    image: tykio/tyk-dashboard:v5.3.8
+    container_name: tyk-dashboard
+    restart: always
+    ports:
+      - 3000:3000
+    volumes:
+      - ./conf/tyk_analytics.conf:/opt/tyk-dashboard/tyk_analytics.conf
+    depends_on:
+      - tyk-mongo
+      - tyk-redis
+
+  tyk-pump:
+    image: tykio/tyk-pump-docker-pub:v1.9.0
+    container_name: tyk-pump
+    restart: always
+    volumes:
+      - ./conf/pump.conf:/opt/tyk-pump/pump.conf
+    depends_on:
+      - tyk-mongo
+      - tyk-redis
+
   tyk-redis:
-    image: redis:6.2.7-alpine
-    networks:
-      - tyk
+    image: redis:6.2.14
+    container_name: tyk-redis
+    restart: always
     ports:
       - 6379:6379
+    volumes:
+      - redis_data:/data
+
+  tyk-mongo:
+    image: mongo:6.0.11
+    container_name: tyk-mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+  
+  # Redminer (Redis UI)
+  redminer:
+    image: us.gcr.io/gdp-labs/redminer
+    container_name: redminer
+    restart: always
+    ports:
+      - 8081:8080
+
+  offline-diff-viewer:
+    image: nuga99/offline-diff-viewer:develop
+    container_name: offline-diff-viewer
+    ports:
+      - "4000:80"
+    security_opt:
+      - no-new-privileges:true
+    volumes:
+      - /var/log/nginx
+    restart: unless-stopped
+    environment:
+      - NODE_ENV=production
+      - NODE_OPTIONS=--openssl-legacy-provider
 
 networks:
-  tyk:
+  default:
+    name: tyk-network
+    external: true
+
+volumes:
+  redis_data:
+  mongo_data:
